--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,12 @@ set-option -g renumber-windows on
 set-option -g default-terminal "xterm"
 
 # ステータスバーの色を設定する
+# 暗いカラースキームの時
 set -g status-bg black
 set -g status-fg white
+# 明るいカラースキームの時
+# set -g status-bg white
+# set -g status-fg black
 
 # 非アクティブなウィンドウの色
 setw -g window-status-fg cyan
@@ -45,16 +49,30 @@ setw -g window-status-last-attr bright
 set-window-option -g window-status-activity-style "fg=#8ae234,bg=default"
 
 # ペインボーダーの色を設定する
-set -g pane-border-bg white
 set -g pane-border-fg black
+# 明るいカラースキームの時
+# set -g pane-border-bg white
+# 暗いカラースキームの時
+set -g pane-border-bg black
+
 # アクティブなペインを目立たせる
 set -g pane-active-border-fg red
+# 明るいカラースキームの時
+# set -g pane-active-border-bg white
+# 暗いカラースキームの時
 set -g pane-active-border-bg black
 
 #set inactive/active window styles
 # http://stackoverflow.com/questions/25532773/change-background-color-of-active-or-inactive-pane-in-tmux
+
+# 暗い背景用
 set -g window-active-style 'fg=colour250,bg=#000033'
-set -g window-style 'fg=colour247,bg=#333333'
+# 明るい背景用
+# set -g window-active-style 'fg=colour0,bg=#ffffff'
+
+# set -g window-style 'fg=colour247,bg=default'
+# set -g window-style 'fg=colour247,bg=#333333'
+
 # set -g window-style 'fg=colour250,bg=colour236'
 # set -g window-active-style 'fg=colour250,bg=colour236,dim'
 # set -g window-active-style 'fg=colour251,bg=default'
