--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9429,146 +9429,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.10051459074020386</real>
+				<real>0.20784313976764679</real>
 				<key>Green Component</key>
-				<real>0.10051288455724716</real>
+				<real>0.20784313976764679</real>
 				<key>Red Component</key>
-				<real>0.10051589459180832</real>
+				<real>0.20784313976764679</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.32156863808631897</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.32156863808631897</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.82352942228317261</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14004382491111755</real>
+				<real>0.45882353186607361</real>
 				<key>Green Component</key>
-				<real>0.87921047210693359</real>
+				<real>0.87843137979507446</real>
 				<key>Red Component</key>
-				<real>0.59473341703414917</real>
+				<real>0.7607843279838562</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.38154411315917969</real>
+				<real>0.54509806632995605</real>
 				<key>Green Component</key>
-				<real>0.83635991811752319</real>
+				<real>0.89411765336990356</real>
 				<key>Red Component</key>
-				<real>0.87748134136199951</real>
+				<real>0.88235294818878174</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99877572059631348</real>
+				<real>0.85098040103912354</real>
 				<key>Green Component</key>
-				<real>0.39599207043647766</real>
+				<real>0.71764707565307617</real>
 				<key>Red Component</key>
-				<real>0.61468899250030518</real>
+				<real>0.54117649793624878</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.9686274528503418</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.70980393886566162</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.93725490570068359</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92060363292694092</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.81977206468582153</real>
+				<real>0.95686274766921997</real>
 				<key>Red Component</key>
-				<real>0.34416967630386353</real>
+				<real>0.86274510622024536</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.9359474778175354</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.96549534797668457</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.96537256240844727</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14004382491111755</real>
+				<real>0.3803921639919281</real>
 				<key>Green Component</key>
-				<real>0.87921047210693359</real>
+				<real>0.7607843279838562</real>
 				<key>Red Component</key>
-				<real>0.59473341703414917</real>
+				<real>0.64705884456634521</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.099807053804397583</real>
+				<real>0.42745098471641541</real>
 				<key>Green Component</key>
-				<real>0.51805692911148071</real>
+				<real>0.7764706015586853</real>
 				<key>Red Component</key>
-				<real>0.98094809055328369</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99877572059631348</real>
+				<real>0.73333334922790527</real>
 				<key>Green Component</key>
-				<real>0.39599207043647766</real>
+				<real>0.60000002384185791</real>
 				<key>Red Component</key>
-				<real>0.61468899250030518</real>
+				<real>0.42352941632270813</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.85098040103912354</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.59215688705444336</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.81960785388946533</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92060363292694092</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.81977206468582153</real>
+				<real>0.83921569585800171</real>
 				<key>Red Component</key>
-				<real>0.34416967630386353</real>
+				<real>0.7450980544090271</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.92549020051956177</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.93333333730697632</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.93333333730697632</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.29652142524719238</real>
+				<real>0.32549020648002625</real>
 				<key>Green Component</key>
-				<real>0.36959609389305115</real>
+				<real>0.32549020648002625</real>
 				<key>Red Component</key>
-				<real>0.3829454779624939</real>
+				<real>0.32549020648002625</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.047058824449777603</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.047058824449777603</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.94117647409439087</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9577,11 +9577,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.10051459074020386</real>
+				<real>0.19607843458652496</real>
 				<key>Green Component</key>
-				<real>0.10051288455724716</real>
+				<real>0.19607843458652496</real>
 				<key>Red Component</key>
-				<real>0.10051589459180832</real>
+				<real>0.19607843458652496</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9600,11 +9600,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>1</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9617,20 +9617,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92647796869277954</real>
+				<real>0.83921569585800171</real>
 				<key>Green Component</key>
-				<real>0.96674919128417969</real>
+				<real>0.83921569585800171</real>
 				<key>Red Component</key>
-				<real>0.96554505825042725</real>
+				<real>0.83921569585800171</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9651,11 +9651,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>1</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10011,20 +10011,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>1</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.20521116256713867</real>
+				<real>0.35686275362968445</real>
 				<key>Green Component</key>
-				<real>0.20520767569541931</real>
+				<real>0.35686275362968445</real>
 				<key>Red Component</key>
-				<real>0.20521381497383118</real>
+				<real>0.35686275362968445</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10903,7 +10903,7 @@
 	<key>NoSyncTimeOfLastPromo</key>
 	<real>454180854.50632799</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>475773847.70731699</real>
+	<real>477127757.782704</real>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
 	<key>OpenArrangementAtStartup</key>
@@ -10970,7 +10970,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-01-31T09:40:07Z</date>
+	<date>2016-02-14T14:07:09Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
