--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -131,24 +131,31 @@
 	path = .gitconfig.local
 [diff]
 	; tool = p4mergetool
-  tool = mvimdiff
+  # tool = mvimdiff
+  tool = nvim
     ; http://qiita.com/takaakikasai/items/3d4f8a4867364a46dfa3
     algorithm = histogram
 	compactionHeuristic = true
 [difftool "mvimdiff"]
     cmd = mvim -f -d \"$LOCAL\" \"$REMOTE\"
+[difftool "nvim"]
+    cmd = nvim -f -d \"$LOCAL\" \"$REMOTE\"
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path =
 [merge]
 	# tool = atom
 	; tool = p4mergetool
-  tool = mvimdiff
+  # tool = mvimdiff
+  tool = nvim
 [mergetool "mvimdiff"]
   cmd = mvim -f -d \"$LOCAL\" \"$MERGED\" \"$REMOTE\"
 	keepBackup = false
 [mergetool "atom"]
   cmd = atom_merge $MERGED
+	keepBackup = false
+[mergetool "nvim"]
+  cmd = nvim -f -d \"$LOCAL\" \"$MERGED\" \"$REMOTE\"
 	keepBackup = false
 [i18n]
 	commitencoding = utf-8
