--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,14 +23,6 @@ set-option -g renumber-windows on
 # 256色サポート
 set-option -g default-terminal "xterm"
 
-# ステータスバーの色を設定する
-# 暗いカラースキームの時
-# set -g status-bg black
-# set -g status-fg white
-# 明るいカラースキームの時
-# set -g status-bg white
-# set -g status-fg black
-
 # 非アクティブなウィンドウの色
 setw -g window-status-fg cyan
 setw -g window-status-bg default
@@ -87,8 +79,8 @@ set-window-option -g mode-fg colour3
 set-window-option -g mode-bg colour0
 
 # コマンドラインの色を設定する
-set -g message-fg white
-set -g message-bg blue
+set -g message-fg black
+set -g message-bg yellow
 set -g message-attr bright
 
 # pane number display
@@ -98,6 +90,17 @@ set -g message-attr bright
 # ステータスバーを設定する
 # ステータスバーの位置
 set-option -g status-position bottom
+
+# ステータスバーの色を設定する
+# 暗いカラースキームの時
+# set -g status-bg black
+# set -g status-fg white
+# 明るいカラースキームの時
+# set -g status-bg white
+# set -g status-fg black
+# status line の背景色を指定する。
+set-option -g status-fg white
+set-option -g status-bg blue
 
 ## 左パネルを設定する
 set -g status-left-length 40
